--- a/index.html
+++ b/index.html
@@ -404,7 +404,9 @@
     { rs:"klar", pr:"KLAHR", st:"—", en:"ready", org:"N" },
     { rs:"ferdig", pr:"FER-dig", st:"FER", en:"finished", org:"N" },
     { rs:"bytte", pr:"BIT-teh", st:"BIT", en:"exchange", org:"N" },
-
+    { rs:"paltuska", en:"halibut", org:"R" },
+    { rs:"djængi", en:"money", org:"R" },
+    
     // Fishing & food
     { rs:"fisk", pr:"FISK", st:"—", en:"fish (Norwegian form)", org:"N" },
     { rs:"ryba", pr:"REE-bah", st:"REE", en:"fish (Russian form)", org:"R" },
