--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
     { rs:"vær", pr:"VAIR", st:"—", en:"weather", org:"N" },
 
     // States & descriptors
-    { rs:"god", pr:"GOOD", st:"—", en:"good", org:"N" },
+    { rs:"korosho", pr:"kor-o-SHO", st:"—", en:"good", org:"R" },
     { rs:"bra", pr:"BRAH", st:"—", en:"fine; okay", org:"N" },
     { rs:"dårlig", pr:"DOH-lig", st:"DOH", en:"bad", org:"N" },
     { rs:"stor", pr:"STOHR", st:"—", en:"big", org:"N" },
