--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
 
     // States & descriptors
     { rs:"korosho", pr:"kor-o-SHO", st:"—", en:"good", org:"R" },
+    { rs:"god", pr:"GOOD", st:"—", en:"good", org:"N" },
     { rs:"bra", pr:"BRAH", st:"—", en:"fine; okay", org:"N" },
     { rs:"dårlig", pr:"DOH-lig", st:"DOH", en:"bad", org:"N" },
     { rs:"stor", pr:"STOHR", st:"—", en:"big", org:"N" },
