--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     { rs:"forsto", pr:"for-STOH", st:"STOH", en:"understand", org:"N" },
     { rs:"forstå", pr:"for-STOH", st:"STOH", en:"understand (variant)", org:"N" },
     { rs:"vite", pr:"VEE-teh", st:"VEE", en:"know", org:"N" },
-    { rs:"se", pr:"SEH", st:"SEH", en:"see", org:"N" },
+    { rs:"smotrom", pr:"SMO-tram", st:"SEH", en:"see", org:"R" },
     { rs:"ligge", pr:"LIG-geh", st:"LIG", en:"lie; be located", org:"N" },
     { rs:"stå", pr:"STOH", st:"STOH", en:"stand", org:"N" },
     { rs:"bringe", pr:"BRING-eh", st:"BRING", en:"bring", org:"N" },
