--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
     { rs:"kjøp", pr:"KYERP", st:"—", en:"buy (variant)", org:"N" },
     { rs:"kup", pr:"KOOP", st:"—", en:"buy (variant)", org:"M" },
     { rs:"salg", pr:"SAHLG", st:"—", en:"sell", org:"N" },
+    { rs:"prodatli", pr:"pro-DAHT-li", st:"—", en:"sell", org:"R" },
     { rs:"arbeid", pr:"AR-bide", st:"AR", en:"work", org:"N" },
     { rs:"snakk", pr:"SNAHK", st:"—", en:"speak (variant)", org:"N" },
     { rs:"sprek", pr:"SPREK", st:"—", en:"speak (variant)", org:"N" },
