--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
     { rs:"nok", pr:"NOK", st:"—", en:"enough", org:"N" },
     { rs:"alt", pr:"AHLT", st:"—", en:"everything", org:"N" },
     { rs:"ingenting", pr:"IN-gen-ting", st:"IN", en:"nothing", org:"N" },
+    { rs:"nietsjevaa", st:"IN", en:"nothing / nevermind", org:"R" },
     { rs:"klar", pr:"KLAHR", st:"—", en:"ready", org:"N" },
     { rs:"ferdig", pr:"FER-dig", st:"FER", en:"finished", org:"N" },
     { rs:"bytte", pr:"BIT-teh", st:"BIT", en:"exchange", org:"N" },
