--- a/index.html
+++ b/index.html
@@ -388,21 +388,23 @@
     { rs:"kopom", pr:"KOH-pom", st:"KOH", en:"buy (-om form)", org:"M" },
     { rs:"kupom", pr:"KOO-pom", st:"KOO", en:"buy (-om form)", org:"M" },
     { rs:"sprækom", pr:"SPRAY-kom", st:"SPRAY", en:"speak (-om form)", org:"M" },
+    { rs:"lygom", pr:"LY-gom", st:"BOR", en:"lying", org:"M" },
 
     // Trade & economy
     { rs:"handel", pr:"HAN-del", st:"HAN", en:"trade", org:"N" },
     { rs:"pris", pr:"PREES", st:"—", en:"price", org:"M" },
     { rs:"penger", pr:"PENG-er", st:"PENG", en:"money", org:"N" },
-    { rs:"dyr", pr:"DEER", st:"—", en:"expensive", org:"N" },
+    { rs:"dyrt", pr:"DEER", st:"—", en:"expensive", org:"N" },
     { rs:"billig", pr:"BIL-lig", st:"BIL", en:"cheap", org:"N" },
     { rs:"kosta", pr:"KOS-tah", st:"KOS", en:"cost", org:"M" },
     { rs:"våg", pr:"VOHG", st:"—", en:"unit of weight", org:"N" },
-    { rs:"mangeli", pr:"MAN-geh-lee", st:"MAN", en:"many; much", org:"M" },
+    { rs:"mangeli", pr:"MAN-geh-lee", st:"MAN", en:"many; how much", org:"M" },
     { rs:"lite", pr:"LEE-teh", st:"LEE", en:"little; small amount", org:"N" },
     { rs:"nok", pr:"NOK", st:"—", en:"enough", org:"N" },
     { rs:"alt", pr:"AHLT", st:"—", en:"everything", org:"N" },
     { rs:"ingenting", pr:"IN-gen-ting", st:"IN", en:"nothing", org:"N" },
     { rs:"nietsjevaa", st:"IN", en:"nothing / nevermind", org:"R" },
+    { rs:"niet", pr:"nIET", st:"BOR", en:"don't", org:"R" },
     { rs:"klar", pr:"KLAHR", st:"—", en:"ready", org:"N" },
     { rs:"ferdig", pr:"FER-dig", st:"FER", en:"finished", org:"N" },
     { rs:"bytte", pr:"BIT-teh", st:"BIT", en:"exchange", org:"N" },
@@ -461,6 +463,7 @@
     { rs:"inni", pr:"IN-nee", st:"IN", en:"inside", org:"N" },
     { rs:"ute", pr:"OO-teh", st:"OO", en:"outside", org:"N" },
     { rs:"borte", pr:"BOR-teh", st:"BOR", en:"away", org:"N" },
+    { rs:"stoppet", pr:"STOPP-et", st:"BOR", en:"stop", org:"N" },
 
     // Time
     { rs:"nu", pr:"NOO", st:"NOO", en:"now", org:"M" },
@@ -508,9 +511,13 @@
     { rs:"men", pr:"MEN", st:"—", en:"but", org:"N" },
     { rs:"for", pr:"FOR", st:"—", en:"for; because", org:"N" },
     { rs:"litt", pr:"LIT", st:"—", en:"a little", org:"N" },
+    { rs:"deta", pr:"det-A", st:"—", en:"this is / that is", org:"M" },
+    { rs:"det", pr:"DET", st:"—", en:"it is", org:"N" },
+    
 
     // Courtesy / meta
     { rs:"basiba", pr:"bah-SEE-bah", st:"SEE", en:"thanks (variant spelling)", org:"R" }
+    { rs:"drasvi", pr:"DRAS-vi", st:"—", en:"hello / hi", org:"R" },
   ];
 
   // --- RENDERING ---
