--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
     // Courtesy / meta
     { rs:"basiba", pr:"bah-SEE-bah", st:"SEE", en:"thanks (variant spelling)", org:"R" }
-    { rs:"drasvi", pr:"DRAS-vi", st:"—", en:"hello / hi", org:"R" },
+    { rs:"drasvi", pr:"DRAS-vi", st:"—", en:"hello", org:"R" },
   ];
 
   // --- RENDERING ---
