--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
     
 
     // Courtesy / meta
-    { rs:"basiba", pr:"bah-SEE-bah", st:"SEE", en:"thanks (variant spelling)", org:"R" }
+    { rs:"basiba", pr:"bah-SEE-bah", st:"SEE", en:"thanks (variant spelling)", org:"R" },
     { rs:"drasvi", pr:"DRAS-vi", st:"—", en:"hello", org:"R" },
   ];
 
