--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
       <div class="brand">
         <div class="title">Russenorsk Core Dictionary <span class="smallcaps">v1</span></div>
         <div class="subtitle">English → Russenorsk search + A→Z scroll list (historical core snapshot)</div>
+        <p>The sources show Russenorsk not as a fully autonomous pidgin, but as a situational contact register where Norwegian and Russian speakers selectively borrowed high-utility words, 
+          echoed successful constructions, and shifted fluidly between native speech and mixed forms depending on communicative pressure</p>
       </div>
     </div>
   </header>
