--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       color: var(--ink);
     }
 
+    .intro-note {
+  font-size: 0.9rem;   /* try 0.85rem if you want it tighter */
+  line-height: 1.45;
+  color: #cfd3dc;     /* optional: slightly softer */
+  max-width: 900px;   /* optional: improves readability */
+}
+
     header{
       position: sticky;
       top: 0;
@@ -292,7 +299,7 @@
       <div class="brand">
         <div class="title">Russenorsk Core Dictionary <span class="smallcaps">v1</span></div>
         <div class="subtitle">English → Russenorsk search + A→Z scroll list (historical core snapshot)</div>
-        <p>The sources show Russenorsk not as a fully autonomous pidgin, but as a situational contact register where Norwegian and Russian speakers selectively borrowed high-utility words, 
+        <p class="intro-note">The sources show Russenorsk not as a fully autonomous pidgin, but as a situational contact register where Norwegian and Russian speakers selectively borrowed high-utility words, 
           echoed successful constructions, and shifted fluidly between native speech and mixed forms depending on communicative pressure</p>
       </div>
     </div>
