--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     .intro-note {
   font-size: 0.9rem;   /* try 0.85rem if you want it tighter */
   line-height: 1.45;
-  color: #cfd3dc;     /* optional: slightly softer */
+  color: #6b7280;     /* optional: slightly softer */
   max-width: 900px;   /* optional: improves readability */
 }
 
