--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
         <div class="title">Russenorsk Core Dictionary <span class="smallcaps">v1</span></div>
         <div class="subtitle">English → Russenorsk search + A→Z scroll list (historical core snapshot)</div>
         <p class="intro-note">The sources show Russenorsk not as a fully autonomous pidgin, but as a situational contact register where Norwegian and Russian speakers selectively borrowed high-utility words, 
-          echoed successful constructions, and shifted fluidly between native speech and mixed forms depending on communicative pressure</p>
+          echoed successful constructions, and shifted fluidly between native speech and mixed forms depending on communicative pressure. Russenorsk is a dead contact language with limited and uneven documentation. What I’ve compiled here is not a claim of absolute correctness, but a best-effort reconstruction based on published sources, attested examples, and documented patterns.
+The goal isn’t to “revive” Russenorsk as it definitively was, but to present a plausible, historically grounded snapshot of how it most likely functioned in everyday use.</p>
       </div>
     </div>
   </header>
