--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   max-width: 900px;   /* optional: improves readability */
 }
 
+    .subtitle.strong {
+  font-weight: 600; /* or 700 if you want it punchy */
+}
     header{
       position: sticky;
       top: 0;
@@ -298,7 +301,7 @@
     <div class="topbar">
       <div class="brand">
         <div class="title">Russenorsk Core Dictionary <span class="smallcaps">v1</span></div>
-        <div class="subtitle">English → Russenorsk search + A→Z scroll list (historical core snapshot)</div>
+        <div class="subtitle strong">English → Russenorsk search + A→Z scroll list (historical core snapshot)</div>
         <p class="intro-note">The sources show Russenorsk not as a fully autonomous pidgin, but as a situational contact register where Norwegian and Russian speakers selectively borrowed high-utility words, 
           echoed successful constructions, and shifted fluidly between native speech and mixed forms depending on communicative pressure. Russenorsk is a dead contact language with limited and uneven documentation. What I’ve compiled here is not a claim of absolute correctness, but a best-effort reconstruction based on published sources, attested examples, and documented patterns.
 The goal isn’t to “revive” Russenorsk as it definitively was, but to present a plausible, historically grounded snapshot of how it most likely functioned in everyday use.</p>
