--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Word Mix Translator</title>
+  <title>Word-Mix Translator</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, sans-serif; margin: 24px; line-height: 1.35; }
     textarea { width: 100%; min-height: 140px; padding: 12px; font-size: 16px; }
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Word Mix Translator</h1>
+  <h1>Word-Mix Translator</h1>
 
   <label for="input">Input</label>
   <textarea id="input" placeholder="Type English (or coded text) here..."></textarea>
